--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,7 +5,7 @@ $font-black: #262626;
 $font-grey: #333333;
 $white: #ffffff;
 $btn: #ff8141;
-$training: #3a4a62;
+$bg-link: #88a3d6;
 $training-list: #575656;
 $footer: #273d50;
 // —————————————————————— //
