--- a/app/scss/blocks/page-header.scss
+++ b/app/scss/blocks/page-header.scss
@@ -1,19 +1,66 @@
 .page-header {
-    
-}
-
-.page-header__wrap {
-    
-
-    // background-image: url("../img/bg-header2@1x.png");
-    // background-repeat: no-repeat;
-    // background-position: 100% 0;
+	// margin: 0 auto;
+	max-width: 1366px;
+	color: $white;
+    background-color: $font-black;
+    background-image: url("../img/bg_header@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
 
     // @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    //     background-image: url("../img/bg-header2@2x.png");
+    //     background-image: url("../img/bg-header@2x.jpg");
     //     background-size: 1221px auto;
     // }
 }
+.page-header__top {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 24px;
+
+}
+.page-header__logo {
+	width: 78px;
+	height: 78px;
+	margin-left: 33px;
+}
+.page-header__center {
+	margin-top: 160px;
+	margin-left: 33px;
+}
+.page-header__info {
+	@include indent;
+	width: 218px;
+	margin-left: 2px;
+	padding: 3px 13px;
+	letter-spacing: 0.3px;
+	background-color: $bg-link;
+	border-radius: 3px;
+
+	&--center {
+		margin-top: 39px;
+		margin-right: 100%;
+		width: 482px;
+    	letter-spacing: 0.2px;
+	}
+	&--bottom {
+		margin-top: 4px;
+		padding-top: 2px;
+		width: 369px;
+    	letter-spacing: 0.2px;
+	}
+}
+.page-header__title {
+	@include indent;
+	margin-top: 35px;
+	font-size: 80px;
+	font-weight: bold;
+	line-height: 1;
+}
+.page-header__bottom {
+	margin-top: 180px;
+	padding-bottom: 40px;
+}
+
 
 // ≥1540px
 @include media-breakpoint-down(xl) {
