--- a/app/scss/scaffolding.scss
+++ b/app/scss/scaffolding.scss
@@ -20,6 +20,7 @@ body {
     font-family: $font;
     font-size: 16px;
     font-style: normal;
+    font-weight: 500;
     line-height: 24px;
     color: $font-black;
     word-wrap: break-word;
