--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,8 @@
 @import "scaffolding";
 @import "blocks/btn";
 @import "blocks/icon";
+@import "blocks/main-nav";
 @import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/page-footer";
+@import "blocks/schedule";
