css occurs-where

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,7 +4,7 @@ $font: "montserrat-example", "Arial", sans-serif;
 $font-black: #262626;
 $font-grey: #333333;
 $white: #ffffff;
-$btn: #ff8141;
+$btn: #f6a46c;
 $bg-link: #88a3d6;
 $training-list: #575656;
 $footer: #273d50;
