--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,9 +5,11 @@
 @import "_mixins/mixins";
 @import "normalize";
 @import "scaffolding";
+@import "blocks/agenda";
 @import "blocks/btn";
 @import "blocks/icon";
 @import "blocks/main-nav";
+@import "blocks/occurs-where";
 @import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/page-footer";
