--- a/app/scss/blocks/page-header.scss
+++ b/app/scss/blocks/page-header.scss
@@ -1,70 +1,80 @@
 .page-header {
-	// margin: 0 auto;
-	max-width: 1366px;
-	color: $white;
+    // margin: 0 auto;
+    max-width: 1366px;
+
+    color: $white;
+
     background-color: $font-black;
     background-image: url("../img/bg_header@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 0 0;
+    background-position: center 0;
 
-    // @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    //     background-image: url("../img/bg-header@2x.jpg");
-    //     background-size: 1221px auto;
-    // }
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+        background-image: url("../img/bg_header@2x.jpg");
+        background-size: 1366px auto;
+    }
 }
 .page-header__top {
     display: flex;
     justify-content: space-between;
     padding-top: 24px;
-
 }
 .page-header__logo {
-	width: 78px;
-	height: 78px;
-	margin-left: 33px;
+    width: 78px;
+    height: 78px;
+    margin-left: 33px;
 }
 .page-header__center {
-	margin-top: 160px;
-	margin-left: 33px;
+    margin-top: 160px;
+    margin-left: 33px;
 }
 .page-header__info {
-	@include indent;
-	width: 218px;
-	margin-left: 2px;
-	padding: 3px 13px;
-	letter-spacing: 0.3px;
-	background-color: $bg-link;
-	border-radius: 3px;
+    @include indent;
 
-	&--center {
-		margin-top: 39px;
-		margin-right: 100%;
-		width: 482px;
-    	letter-spacing: 0.2px;
-	}
-	&--bottom {
-		margin-top: 4px;
-		padding-top: 2px;
-		width: 369px;
-    	letter-spacing: 0.2px;
-	}
+    width: 217px;
+    margin-left: 2px;
+    padding: 3px 13px;
+
+    border-radius: 3px;
+    background-color: $bg-link;
+
+    &--top {
+        font-weight: bold;
+    }
+
+    &--center {
+        width: 482px;
+        margin-top: 39px;
+        margin-right: 100%;
+
+        letter-spacing: 0.2px;
+    }
+    
+    &--bottom {
+        width: 369px;
+        margin-top: 4px;
+        padding-top: 2px;
+
+        letter-spacing: 0.2px;
+    }
 }
 .page-header__title {
-	@include indent;
-	margin-top: 35px;
-	font-size: 80px;
-	font-weight: bold;
-	line-height: 1;
+    @include indent;
+
+    margin-top: 35px;
+
+    font-size: 80px;
+    font-weight: bold;
+    line-height: 1;
 }
 .page-header__bottom {
-	margin-top: 180px;
-	padding-bottom: 40px;
+    margin-top: 180px;
+    padding-bottom: 40px;
 }
 
 
 // ≥1540px
 @include media-breakpoint-down(xl) {
-    
 }
 
 // ≥1200px
