--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,10 +7,17 @@
 @import "scaffolding";
 @import "blocks/agenda";
 @import "blocks/btn";
+@import "blocks/fellowships";
+@import "blocks/gathering";
 @import "blocks/icon";
 @import "blocks/main-nav";
+@import "blocks/meeting";
 @import "blocks/occurs-where";
+@import "blocks/organizer";
+@import "blocks/owl-carousel";
+@import "blocks/owl-theme";
 @import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/page-footer";
+@import "blocks/present";
 @import "blocks/schedule";
