--- a/app/scss/blocks/page-header.scss
+++ b/app/scss/blocks/page-header.scss
@@ -4,7 +4,7 @@
 
     color: $white;
 
-    background-color: $font-black;
+    background-color: $font-grey;
     background-image: url("../img/bg_header@1x.jpg");
     background-repeat: no-repeat;
     background-position: center 0;
