--- a/app/scss/blocks/page-main.scss
+++ b/app/scss/blocks/page-main.scss
@@ -1,6 +1,13 @@
 .page-main {
     // margin: 0 auto;
-	max-width: 1366px;
+    max-width: 1366px;
+}
+
+.page-main__title {
+    font-size: 60px;
+    font-weight: 800;
+    line-height: 1;
+    color: $font-grey;
 }
 
 // ≥1540px
