--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,8 @@
 @import "scaffolding";
 @import "blocks/agenda";
 @import "blocks/btn";
+@import "blocks/contacts";
+@import "blocks/faq";
 @import "blocks/fellowships";
 @import "blocks/gathering";
 @import "blocks/icon";
