--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,10 +3,12 @@ $font: "montserrat-example", "Arial", sans-serif;
 // ————————COLORS———————— //
 $font-black: #262626;
 $font-grey: #333333;
+$black: #000000;
 $white: #ffffff;
 $btn: #f6a46c;
 $bg-link: #88a3d6;
-$training-list: #575656;
+$fellowships: #9d9d9d;
+$bsg: #588ac7;
 $footer: #273d50;
 // —————————————————————— //
 
