--- a/app/scss/blocks/page-footer.scss
+++ b/app/scss/blocks/page-footer.scss
@@ -1,16 +1,40 @@
 .page-footer {
     // margin: 0 auto;
 	max-width: 1366px;
-}
+	margin-top: 112px;
 
-.page-footer__wrap {
-    
 }
-
 .page-footer__title {
     @include indent;
-
 }
+.page-footer__btn {
+	width: 455px;
+	height: 152px;
+	border-radius: 5px;
+	box-shadow: 0px 43px 76px 0 rgba(#ef9252, 0.5);
+	background-image: linear-gradient(50deg, #f6a46c, #f6cd6c);
+	font-size: 27px;
+	font-weight: 800;
+	line-height: 1.13;
+	letter-spacing: -0.7px;
+	text-align: center;
+	color: $white;
+	border: none;
+	transition: all 400ms ease-in-out;
+
+	&:hover {
+		box-shadow: 0px 25px 55px 0 rgba(#ef9252, 0.45);
+		background-image: linear-gradient(50deg, #ef9252, #f6cd6c);
+	}
+	&:focus {
+        outline: none;
+    }
+    &:active {
+		box-shadow: 0px 15px 45px 0 rgba(#ef9252, 0.3);
+		background-image: linear-gradient(50deg, #ffe39f, #fcb27f);
+	}
+}
+
 
 // ≥1540px
 @include media-breakpoint-down(xl) {
