--- a/app/scss/blocks/main-nav.scss
+++ b/app/scss/blocks/main-nav.scss
@@ -11,6 +11,7 @@
 }
 .main-nav__item {
     margin-left: 8px;
+    margin-bottom: 10px;
 }
 .main-nav__link {
     position: relative;
@@ -28,7 +29,9 @@
         border-radius: 24px;
         background-color: $bg-link;
     }
-    
+    &:focus {
+        outline: none;
+    }
     &:active {
         background-color: transparent;
         box-shadow: inset 0 0 0 2px $bg-link;
