--- a/app/scss/blocks/page-header.scss
+++ b/app/scss/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-    // margin: 0 auto;
+    margin: 0 auto;
     max-width: 1366px;
 
     color: $white;
@@ -8,10 +8,11 @@
     background-image: url("../img/bg_header@1x.jpg");
     background-repeat: no-repeat;
     background-position: center 0;
+    background-size: cover;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
         background-image: url("../img/bg_header@2x.jpg");
-        background-size: 1366px auto;
+        // background-size: 1366px auto;
     }
 }
 .page-header__top {
@@ -25,7 +26,7 @@
     margin-left: 33px;
 }
 .page-header__center {
-    margin-top: 160px;
+    margin-top: 150px;
     margin-left: 33px;
 }
 .page-header__info {
@@ -79,10 +80,16 @@
 
 // ≥1200px
 @include media-breakpoint-down(lg) {
+    .page-header__bottom {
+        margin-top: 150px;
+    }
 }
 
 // ≥992px
 @include media-breakpoint-down(md) {
+    .page-header__bottom {
+        margin-top: 130px;
+    }
 }
 
 // ≥768px
